--- a/client/templates/restaurant.html
+++ b/client/templates/restaurant.html
@@ -2,7 +2,7 @@
 	<ion-header-bar align-title="left" class="bar-positive">
 		<div class="bar bar-header bar-light head_bar">
         	 <div class="back_arrrow">
-        		<span class="sp2"><a ui-sref="tab.search"><img src="/left-arrow.png" alt=""/></a></span>	
+        		<span class="sp2"><a ui-sref="tab.suggestion"><img src="/left-arrow.png" alt=""/></a></span>	
                	<h2>{{restaurant.restaurantDishes[0].restaurant.name}}</h2>
         	 </div>
 		</div>
