--- a/client/templates/feed.html
+++ b/client/templates/feed.html
@@ -8,7 +8,7 @@
     </ion-header-bar>
     <ion-content>
         <div class="full_back suggest feed">
-            <div class="row" ng-repeat="post in feed.posts">
+            <div ng-if="feed.posts != 'Loading'" class="row" ng-repeat="post in feed.posts">
                 <div class="col div1">
                     <div class="row">
                         <div class="col col-33">
@@ -49,6 +49,11 @@
             <div class="no-suggestion" ng-if="feed.posts.length == 0">
                 <div class="no-content">
                     <h4>No posts currently available</h4>
+                </div>
+            </div>
+            <div class="no-suggestion" ng-if="feed.posts === 'Loading'">
+                <div class="no-content">
+                    <h4>Loading...</h4>
                 </div>
             </div>
         </div>
