--- a/client/templates/filter.html
+++ b/client/templates/filter.html
@@ -2,7 +2,7 @@
     <ion-header-bar align-title="left" class="bar-positive">
 	    <div class="bar bar-header bar-light head_bar">
 		    <div class="back_arrrow next-bar">
-		    	<span class="sp2"><a ui-sref="review"><img src="./left-arrow.png" alt=""/></a></span>	
+		    	<span class="sp2"><a ui-sref="tab.review"><img src="./left-arrow.png" alt=""/></a></span>	
 		    	<h2 class="logo-ig"><img src="./thedish.png"></h2>
 		    </div>
 	    </div>
