--- a/client/templates/tabs.html
+++ b/client/templates/tabs.html
@@ -8,7 +8,7 @@
     <ion-nav-view name="search-tab"></ion-nav-view>
   </ion-tab>
 
-  <ion-tab  icon-on="dish-off"  icon-off="dish-off" ui-sref="review" class="active">
+  <ion-tab  icon-on="dish-off"  icon-off="dish-off" ui-sref="tab.review" class="active">
     <ion-nav-view name="review-tab"></ion-nav-view>
   </ion-tab>
   <ion-tab  icon-on="feed-off" ui-sref="tab.feed" icon-off="feed-on">
